<resources>
    <string name="app_name">Breeze</string>
    <string name="posts">Posts</string>
    <string name="account">Account</string>
    <string name="inbox">Inbox</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="subs">Subs</string>
    <string name="version">0.1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="retry">Retry</string>
    <string name="error_loading_posts">Error loading posts. (╯°□°)╯︵ ┻━┻</string>
    <string name="reddit_cannot_be_reached_at_the_moment">Reddit cannot be reached at the moment...</string>
    <string name="table_flip">(╯°□°)╯︵ ┻━┻</string>


</resources>
