<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/postsFragment"
        android:icon="@drawable/post_24dp"
        android:title="@string/posts" />

    <item
        android:id="@+id/subsFragment"
        android:icon="@drawable/list_24dp"
        android:title="@string/subs" />

    <item
        android:id="@+id/accountFragment"
        android:icon="@drawable/account_circle_24dp"
        android:title="@string/account"

        />

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/search_24dp"
        android:title="@string/search" />

    <item
        android:id="@+id/inboxFragment"
        android:icon="@drawable/inbox_24dp"
        android:title="@string/inbox"

        />

    <!--    <item-->
    <!--        android:id="@+id/settingsFragment"-->
    <!--        android:icon="@drawable/settings_24dp"-->
    <!--        android:title="@string/settings"-->

    <!--        />-->

</menu>